--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
       run: ./build.sh
 
   release:
+    needs: build
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -25,9 +26,9 @@ jobs:
     - name: Create Release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        tag: ${{ github.sha }}
+        tag: ${{ github.sha[:7] }}
       run: |
-        gh release create "${tag:0:6}" \
+        gh release create "$tag" \
               --repo="$GITHUB_REPOSITORY" \
               --title="${GITHUB_REPOSITORY#*/} ${tag#v}" \
               --generate-notes
