--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,12 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build
       run: ./build.sh
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: build_output
+        path: |
+          main.o
 
   release:
     needs: build
@@ -23,6 +29,10 @@ jobs:
     permissions:
       contents: write
     steps:
+    - name: Download artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: build_output
     - name: Create Release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
